syntax = "proto3";

package policy.subjectmapping;

import "authorization/authorization.proto";
import "buf/validate/validate.proto";
import "common/common.proto";
import "google/api/annotations.proto";
import "policy/attributes/attributes.proto";

/*
    # Subject Mapping (aka Access Control Subject Encoding aka ACSE):  Structures supporting the mapping of Subjects and Attributes (e.g. Entitlement)

    ## Examples

    ### Where:

      - attribute_value_id represents the following attribute
        - FQN: "http://demo.com/attr/example/value/foobar"
        - UUID: "12345678-1234-1234-1234-123456789012"


   ## Create a Subject Mapping Policy using the above (previous) Subject Set for attribute http://demo.com/attr/example/value/foobar
   and permitted actions TRANSMIT and DECRYPT

    ```bash
    grpcurl -plaintext -d '{
   "subject_mapping": {
     "metadata": {
       "labels": {
         "name": "sample-subject-mappings"
       }
     },
     "attribute_value_id": "12345678-1234-1234-1234-123456789012",
     # optional to eitherprovide existing SubjectConditionSet (which takes precedence)
     "existing_subject_condition_set_id": "0000-1111-2222",
     # or to create new SubjectConditionSet
     "new_subject_condition_set": {
       "name": "sample-subject-condition-set",
       "subject_sets": [
         {
           "condition_groups": [
             {
               "conditions": [
                 {
                   "subject_external_field": "division",
                   "operator": "IN",
                   "subject_external_values": ["Sales", "Marketing"]
                 }
               ],
               "boolean_operator": "AND"
             }
           ]
         }
       ]
     },
     "actions": [
       {
         "standard": "STANDARD_ACTION_TRANSMIT"
       },
       {
         "standard": "STANDARD_ACTION_DECRYPT"
       }
     ]
   }
   }' localhost:8080 policy.subjectmapping.SubjectMappingService.CreateSubjectMapping
    ```

   ## Find matching subject mappings for Subject alice:

   ```bash
     grpcurl -plaintext -d '{
     "subject":  {
       "attributes":  {
         "division":  "Sales",
         "preferredUsername":  "alice@example.org"
       }
     }
   }' localhost:8080 SubjectMappingService.MatchSubjectMappings
*/

// buflint ENUM_VALUE_PREFIX: to make sure that C++ scoping rules aren't violated when users add new enum values to an enum in a given package
enum SubjectMappingOperatorEnum {
  SUBJECT_MAPPING_OPERATOR_ENUM_UNSPECIFIED = 0;
  SUBJECT_MAPPING_OPERATOR_ENUM_IN = 1;
  SUBJECT_MAPPING_OPERATOR_ENUM_NOT_IN = 2;
}

// buflint ENUM_VALUE_PREFIX: to make sure that C++ scoping rules aren't violated when users add new enum values to an enum in a given package
enum ConditionBooleanTypeEnum {
  CONDITION_BOOLEAN_TYPE_ENUM_UNSPECIFIED = 0;
  CONDITION_BOOLEAN_TYPE_ENUM_AND = 1;
  CONDITION_BOOLEAN_TYPE_ENUM_OR = 2;
}

/**
    A Condition defines a rule of <subject external field name> <operator> <subject external values>

   Example:  Match Subjects with field "division" and a value of "Accounting" or "Marketing":
   {
     "subject_external_field": "division",
     "operator": "IN",
     "subject_external_values" : ["Accounting", "Marketing"]
   }

   Example: Match a subject by ensuring they are not part of the Fantastic Four:
   {
     "subject_external_field": "superhero_name",
     "operator": "NOT_IN",
     "subject_external_values" : ["mister_fantastic", "the_thing", "human_torch", "invisible_woman"]
   }
*/
message Condition {
  // externally known field name (such as from idP/LDAP)
  string subject_external_field = 1;

  // the evaluation operator of relation
  SubjectMappingOperatorEnum operator = 2 [
    (buf.validate.field).enum.defined_only = true,
    (buf.validate.field).required = true
  ];

  // list of comparison values for the subject_external_field, evaluated by the operator
  repeated string subject_external_values = 3;
}

// A collection of Conditions evaluated by the boolean_operator provided
message ConditionGroup {
  repeated Condition conditions = 1 [(buf.validate.field).repeated.min_items = 1];

  // the boolean evaluation type across the conditions
  ConditionBooleanTypeEnum boolean_operator = 2 [
    (buf.validate.field).enum.defined_only = true,
    (buf.validate.field).required = true
  ];
}

// A collection of Condition Groups
message SubjectSet {
  // multiple Condition Groups are evaluated with AND logic
  repeated ConditionGroup condition_groups = 1 [(buf.validate.field).repeated.min_items = 1];
}

// A container for multiple Subject Sets, each containing Condition Groups, each containing Conditions. Multiple Subject Sets in a SubjectConditionSet
// are evaluated with AND logic. As each Subject Mapping has only one Attribute Value, the SubjectConditionSet is reusable across multiple
// Subject Mappings / Attribute Values and is an independent unit.
message SubjectConditionSet {
  string id = 1;

  // an optional name for ease of reference
  string name = 2;

  common.Metadata metadata = 3;

  // multiple Subject Sets are evaluated with AND logic
  repeated SubjectSet subject_sets = 4 [(buf.validate.field).repeated.min_items = 1];
}

/*
   Subject Mapping: A Policy assigning Subject Set(s) to a permitted attribute value + action(s) combination

   Example: Subjects in sets 1 and 2 are entitled attribute value http://wwww.example.org/attr/example/value/one
   with permitted actions TRANSMIT and DECRYPT
   {
    "id": "someid",
    "attribute_value": {example_one_attribute_value...},
    "subject_condition_set": {"subject_sets":[{subject_set_1},{subject_set_2}]...},
    "actions": [{"standard": "STANDARD_ACTION_DECRYPT"}", {"standard": "STANDARD_ACTION_TRANSMIT"}]
   }
*/
message SubjectMapping {
  string id = 1;

  common.Metadata metadata = 2;

  // the Attribute Value mapped to; aka: "The Entity Entitlement Attribute"
  policy.attributes.Value attribute_value = 3;

  // the reusable SubjectConditionSet mapped to the given Attribute Value
  SubjectConditionSet subject_condition_set = 4;

  // The actions permitted by subjects in this mapping
  repeated authorization.Action actions = 5;
}

// A property of a Subject/Entity as a field->value pair.  This would mirror external user attributes retrieved
// from an authoritative source such as an IDP (Identity Provider) or User Store.  Examples include such ADFS/LDAP, OKTA, etc.
// For now, a valid property must contain both field & value. 
message SubjectProperty {
  string external_field = 1 [(buf.validate.field).required = true];
  string external_value = 2 [(buf.validate.field).required = true];
}

// MatchSubjectMappingsRequest liberally returns a list of SubjectMappings based on the provided SubjectProperties. The SubjectMappings are returned
// if there is any single condition found among the structures that matches for one of the provided properties:
// 1. The external field, external value, and an IN operator
// 2. The external field, _no_ external value, and a NOT_IN operator
//
// Without this filtering, if a field was something like 'emailAddress' or 'username', every Subject is probably going to relate to that mapping
// in some way or another, potentially matching every single attribute in the DB if a policy admin has relied heavily on that field. There is no
// logic applied beyond a single condition within the query to avoid business logic interpreting the supplied conditions beyond the bare minimum
// initial filter.
//
// NOTE: if you have any issues, debug logs are available within the service to help identify why a mapping was or was not returned.
message MatchSubjectMappingsRequest {
  repeated SubjectProperty subject_properties = 1;
}

message MatchSubjectMappingsResponse {
  repeated SubjectMapping subject_mappings = 1;
}

/*
  Subject Mappings CRUD Operations
*/

message GetSubjectMappingRequest {
  string id = 1 [(buf.validate.field).required = true];
}
message GetSubjectMappingResponse {
  SubjectMapping subject_mapping = 1;
}

message ListSubjectMappingsRequest {}
message ListSubjectMappingsResponse {
  repeated SubjectMapping subject_mappings = 1;
}

message CreateSubjectMappingRequest{
  common.MetadataMutable metadata = 1;

  // Attribute Value to be mapped to
  string attribute_value_id = 2 [(buf.validate.field).required = true];

  // Reuse existing SubjectConditionSet (NOTE: prioritized over new_subject_condition_set)
  string existing_subject_condition_set_id = 3;

  // Create new SubjectConditionSet (NOTE: ignored if existing_subject_condition_set_id is provided)
  SubjectConditionSetCreate new_subject_condition_set = 4;

  // The actions permitted by subjects in this mapping
  repeated authorization.Action actions = 5 [(buf.validate.field).repeated.min_items = 1];
}
message CreateSubjectMappingResponse {
  string id = 1;
}

message UpdateSubjectMappingRequest {
  string id = 1 [(buf.validate.field).required = true];

  common.MetadataMutable update_metadata = 2;

  // Replaces the existing SubjectConditionSet id with a new one
  string update_subject_condition_set_id = 3;

  // Replaces entire list of actions permitted by subjects
  repeated authorization.Action update_actions = 5;
}
message UpdateSubjectMappingResponse {
  string id = 1;
}

message DeleteSubjectMappingRequest {
  string id = 1 [(buf.validate.field).required = true];
}
message DeleteSubjectMappingResponse {
  string id = 1;
}

/**
  SubjectConditionSet CRUD operations
*/

message GetSubjectConditionSetRequest {
  string id = 1 [(buf.validate.field).required = true];
}
message GetSubjectConditionSetResponse {
  SubjectConditionSet subject_condition_set = 1;
  // contextualized Subject Mappings associated with this SubjectConditionSet
  repeated SubjectMapping associated_subject_mappings = 2;
}

message ListSubjectConditionSetsRequest {}
message ListSubjectConditionSetsResponse {
  repeated SubjectConditionSet subject_condition_sets = 1;
}

message SubjectConditionSetCreate {
  common.MetadataMutable metadata = 1;

  // multiple Subject Sets are evaluated with AND logic
  repeated SubjectSet subject_sets = 2 [(buf.validate.field).repeated.min_items = 1];
}
message CreateSubjectConditionSetRequest {
  SubjectConditionSetCreate subject_condition_set = 1;
}
message CreateSubjectConditionSetResponse {
  string id = 1;
}

message UpdateSubjectConditionSetRequest {
  string id = 1 [(buf.validate.field).required = true];

  common.MetadataMutable update_metadata = 2;

  // if provided, replaces entire existing structure of Subject Sets, Condition Groups, & Conditions
  repeated SubjectSet update_subject_sets = 3;
}
message UpdateSubjectConditionSetResponse {
  string id = 1;
}

message DeleteSubjectConditionSetRequest {
  string id = 1 [(buf.validate.field).required = true];
}
message DeleteSubjectConditionSetResponse {
  string id = 1;
}


service SubjectMappingService {

  // Find matching Subject Mappings for a given Subject
  rpc MatchSubjectMappings(MatchSubjectMappingsRequest) returns (MatchSubjectMappingsResponse) {
    option (google.api.http) = {
      post: "/subject-mappings/match"
      body: "subject_properties"
    };
  }

  rpc ListSubjectMappings(ListSubjectMappingsRequest) returns (ListSubjectMappingsResponse) {
    option (google.api.http) = {get: "/subject-mappings"};
  }
  rpc GetSubjectMapping(GetSubjectMappingRequest) returns (GetSubjectMappingResponse) {
    option (google.api.http) = {get: "/subject-mappings/{id}"};
  }

  rpc CreateSubjectMapping(CreateSubjectMappingRequest) returns (CreateSubjectMappingResponse) {
    option (google.api.http) = {
      post: "/subject-mappings"
      body: "*"
    };
  }

  rpc UpdateSubjectMapping(UpdateSubjectMappingRequest) returns (UpdateSubjectMappingResponse) {
    option (google.api.http) = {
      patch: "/subject-mappings/{id}"
      body: "*"
    };
  }

  rpc DeleteSubjectMapping(DeleteSubjectMappingRequest) returns (DeleteSubjectMappingResponse) {
    option (google.api.http) = {delete: "/subject-mappings/{id}"};
  }

  rpc ListSubjectConditionSets(ListSubjectConditionSetsRequest) returns (ListSubjectConditionSetsResponse) {
    option (google.api.http) = {get: "/subject-condition-sets"};
  }

  rpc GetSubjectConditionSet(GetSubjectConditionSetRequest) returns (GetSubjectConditionSetResponse) {
    option (google.api.http) = {get: "/subject-condition-sets/{id}"};
  }

  rpc CreateSubjectConditionSet(CreateSubjectConditionSetRequest) returns (CreateSubjectConditionSetResponse) {
    option (google.api.http) = {
      post: "/subject-condition-sets"
      body: "*"
    };
  }

  rpc UpdateSubjectConditionSet(UpdateSubjectConditionSetRequest) returns (UpdateSubjectConditionSetResponse) {
    option (google.api.http) = {
      patch: "/subject-condition-sets/{id}"
      body: "*"
    };
  }

  rpc DeleteSubjectConditionSet(DeleteSubjectConditionSetRequest) returns (DeleteSubjectConditionSetResponse) {
    option (google.api.http) = {delete: "/subject-condition-sets/{id}"};
  }

}
